# pagb-reconstruction

./: .gitignore  Justfile  README.md  download_sample.py  pagb-onefile.spec  pagb.spec  pyproject.toml
.github/: copilot-instructions.md
.github/memory/: architect.md  code-reviewer.md  decisions.md  developer.md  frustration-analyzer.md  generalizer.md  git.md  librarian.md  quality.md  researcher.md  tester.md  visual-critic.md
.github/research/: INDEX.md  ebsd-desktop-ia-patterns.md  github-issue-reporting.md  rust-ecosystem-ebsd-migration.md
.github/workflows/: ci.yml  release.yml
benchmarks/: rust_vs_python.py
data/: sdss_ferrite_austenite.ang
docs/: REFERENCES.md
packaging/: build-appimage.sh  pagb-reconstruction.desktop
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  lib_test.rs
rust_test/: Cargo.toml
scripts/: interaction_sweep.py
src/pagb_reconstruction/: __init__.py  app.py
src/pagb_reconstruction/core/: __init__.py  base.py  compare.py  constants.py  crystal.py  ebsd_map.py  fit_metrics.py  grain.py  grain_metrics.py  graph.py  grid.py  manual_edit.py  orientation.py  orientation_relationship.py  phase.py  reconstruction.py  updater.py  variant.py
src/pagb_reconstruction/io/: __init__.py  ang_io.py  base.py  crc_io.py  ctf_io.py  figure_export.py  grid_header.py  hdf5_io.py  reconstruction_export.py
src/pagb_reconstruction/ui/: __init__.py  main_window.py  (+4 more)
tests/: conftest.py  test___init__.py  test_app.py  test_array_ops.py  test_base.py  test_bug_report.py  test_colormap.py  test_compare.py  test_compare_dialog.py  test_compare_grid.py  test_compute.py  test_compute_worker.py  test_constants.py  test_display_maps.py  test_ebsd_map.py  test_engine.py  test_figure_export.py  test_fit_metrics.py  test_grain.py  test_grain_metrics.py  test_graph.py  test_grid.py  test_grid_header.py  test_icons.py  test_io.py  test_logging_setup.py  test_main_window.py  test_manual_edit.py  test_map_properties.py  test_map_viewer.py  test_math_ops.py  test_misorientation_panel.py  test_model_widget.py  test_or.py  test_or_panel.py  test_orientation.py  test_orientation_relationship.py  test_packaging.py  test_palette.py  test_param_panel.py  (+17 more)
(+32 files in other folders)
