[project]
name = "pagb-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alan Blanchet", email = "alan@alan-blanchet.fr" }]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numba>=0.65.0",
    "numpy>=2.2.6",
    "orix>=0.14.2",
    "pydantic>=2.0",
    "pyqtdarktheme>=2.1.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "superqt>=0.8.1",
]

[project.scripts]
pagb = "pagb_reconstruction.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]
