[package]
name = "pagb_kernels"
version = "0.1.0"
edition = "2021"

[lib]
name = "pagb_kernels"
crate-type = ["cdylib"]

[dependencies]
# abi3: one wheel works on CPython 3.10+, so CI need not match interpreters
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
numpy = "0.23"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
